2005-01-22  Chad Fowler  <chad@chadfowler.com>
	* lib/rubygems/custom_require.rb: Lyle Johnson's fix for Bug #1379

2005-01-20  Chad Fowler  <chad@chadfowler.com>
	* lib/rubygems/validator.rb: Applied Austin Ziegler/Kasper Schiess's
	patch to fix unit test running bug.

2005-01-14  Chad Fowler  <chad@chadfowler.com>
	* lib/rubygems/installer.rb: attempt at fixing Ryan Davis's reported Shebang bug.
	STILL NOT WORKING, because it doesn't work with ^M characters.
	* lib/rubygems/config_file.rb: small but ugly error fixed if no config file exists.
	* lib/rubygems/remote_installer.rb: Fixed bug http://rubyforge.org/tracker/index.php?func=detail&aid=1331&group_id=126&atid=575.

2005-01-01  Chad Fowler  <chad@chadfowler.com>
	* Released 0.8.4

2004-12-31  Jim Weirich  <jim@weirichhouse.org>

	* Rakefile: Switch to standard Rake test tasks.

	* lib/rubygems/remote_installer.rb
	(Gem::RemoteSourceFetcher::read_data): Added a retry to try a
	lower case gem name if the open failed.  This fixes a problem
	where case differences are preventing some gems from installing.

2004-12-29  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/gem_commands.rb (Gem::InstallCommand::execute):
	Changed the RemoteInstaller to take an options hash rather than
	individual options.  This will leave the interface more resilient
	to changes as more options are added
	(e.g. --install_dependencies).

	* lib/rubygems/specification.rb (Gem::Specification): Marked array
	attributes explicitly.  This allows for explicit conversion to
	arrays when assigned.

	* test/test_specification.rb
	(TestSimpleSpecification::test_array_attributes): Added test for
	array_attributes forcing values to arrays.

2004-12-28  Jim Weirich  <jim@tardis>

	* lib/rubygems.rb (Gem::Exception::ensure_gem_subdirectories):
	Fixed the Ryan Davis patch to work correctly when directories are
	not writable.
	
2004-12-18  Chad Fowler <chad@chadfowler.com>
	* lib/rubygems/version.rb: Erik Veenstra's sort patch.